package io.gitlab.plunts.gradle.plantuml.examples.app.service.internal;

public class GarageHelper {

}
